[project]
name = "time-traveler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "exceptiongroup==1.3.0",
    "google-search-results>=2.4.2",
    "h11==0.16.0",
    "idna==3.10",
    "langchain>=0.3.26",
    "langchain-chroma==0.2.2",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.69",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.0",
    "langchain-upstage>=0.6.0",
    "langgraph>=0.5.4",
    "lxml>=6.0.0",
    "numpy==1.26.4",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.3.0",
    "playwright>=1.53.0",
    "pycparser==2.22",
    "pyowm>=3.3.0",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "requests==2.32.4",
    "selenium==4.33.0",
    "setuptools>=80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "streamlit>=1.47.0",
    "tabulate>=0.9.0",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
]
